--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit  
+ 
 matplotlib  
-pandas  
 numpy  
-scikit-learn  
 pillow 
-pip install -r requirements.txt
 qrcode
+streamlit==1.20.0  
+pandas==1.5.3  
+scikit-learn==1.2.0 
